US6532 Bank / Card Split TA12609 - Migrate activities
Both login and happy path page flows are tested and functional

--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -43,67 +43,67 @@
 			</intent-filter>
 		</activity>
 	
-		<activity android:name="com.discover.mobile.security.EnhancedAccountSecurityActivity"
+		<activity android:name="com.discover.mobile.bank.security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard">
 
 			</activity>
 		
-		<activity android:name="com.discover.mobile.login.LockOutUserActivity"
+		<activity android:name="com.discover.mobile.bank.login.LockOutUserActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait" />
 		
-		<activity android:name="com.discover.mobile.login.register.RegistrationAccountInformationActivity"
+		<activity android:name="com.discover.mobile.card.login.register.RegistrationAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard">
 
 		</activity>
 	
-		<activity android:name="com.discover.mobile.login.register.ForgotPasswordAccountInformationActivity"
+		<activity android:name="com.discover.mobile.card.login.register.ForgotPasswordAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" >
 		</activity>
 	
-		<activity android:name="com.discover.mobile.login.register.ForgotBothAccountInformationActivity"
+		<activity android:name="com.discover.mobile.card.login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" />
 		
-		<activity android:name="com.discover.mobile.login.register.CreateLoginActivity"
+		<activity android:name="com.discover.mobile.card.login.register.CreateLoginActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" >
 			
 			</activity>
 		
-		<activity android:name="com.discover.mobile.login.register.AccountInformationConfirmationActivity"
+		<activity android:name="com.discover.mobile.card.login.register.AccountInformationConfirmationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" />
 
-		<activity android:name="com.discover.mobile.login.register.StrengthBarHelpActivity"
+		<activity android:name="com.discover.mobile.card.login.register.StrengthBarHelpActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" />
 	
-		<activity android:name="com.discover.mobile.login.register.ForgotCredentialsActivity"
+		<activity android:name="com.discover.mobile.card.login.register.ForgotCredentialsActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard">
 		</activity>
 		
-		<activity android:name="com.discover.mobile.login.register.ForgotUserIdActivity"
+		<activity android:name="com.discover.mobile.card.login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" >
 		</activity>
 		
-		<activity android:name="com.discover.mobile.login.register.EnterNewPasswordActivity"
+		<activity android:name="com.discover.mobile.card.login.register.EnterNewPasswordActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" >
 		</activity>
 		
-		<activity android:name="com.discover.mobile.help.CustomerServiceContactsActivity"
+		<activity android:name="com.discover.mobile.bank.help.CustomerServiceContactsActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" >
 		</activity>
 	
-		<activity android:name="com.discover.mobile.navigation.NavigationMenuRootActivity" />
+		<activity android:name="com.discover.mobile.common.nav.NavigationRootActivity" />
 		
 		<!--  Xtify Setup -->
 		<receiver android:name="com.xtify.sdk.c2dm.C2DMBroadcastReceiver" >
@@ -119,7 +119,7 @@
             </intent-filter>
         </receiver>
         
-        <receiver android:name="com.discover.mobile.push.receive.XtifyNotifier">
+        <receiver android:name="com.discover.mobile.card.push.receive.XtifyNotifier">
             <intent-filter>
                 <action android:name="com.xtify.sdk.NOTIFIER" />
             </intent-filter>
@@ -141,10 +141,8 @@
         <service android:name="com.xtify.sdk.alarm.LocationIntentService" />
 		
 		<!--  End Xtify Setup -->
-        <activity android:name="com.discover.mobile.push.PushTermsAndConditionsActivity"></activity>
-        <activity android:name="com.discover.mobile.navigation.CardNavigationRootActivity"></activity>
+        <activity android:name="com.discover.mobile.card.navigation.CardNavigationRootActivity"></activity>
         <activity android:name="com.discover.mobile.bank.navigation.BankNavigationRootActivity" ></activity>
-        <activity android:name="com.discover.mobile.push.PushEnrollFragment"></activity>
     </application>
     
 </manifest>
