--- a/Discover-Card-Phone/build.xml
+++ b/Discover-Card-Phone/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Discover-Commons" default="help">
+<project name="Discover-Card-Phone" default="help">
 
     <!-- The local.properties file is created and updated by the 'android' tool.
          It contains the path to the SDK. It should *NOT* be checked into
