--- a/Discover-Card-Phone/project.properties
+++ b/Discover-Card-Phone/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-15
+android.library.reference.1=../Libraries/JakeWharton-ActionBarSherlock-4.2.0/library
+android.library.reference.2=../Libraries/jfeinstein10-SlidingMenu-c3a47530d6/library
+android.library.reference.3=../Commons/main
 android.library=true
-android.library.reference.3=../../../git/Discover-Android/Commons/main
-android.library.reference.1=../../../git/Discover-Android/Libraries/JakeWharton-ActionBarSherlock-4.2.0/library
-android.library.reference.2=../../../git/Discover-Android/Libraries/jfeinstein10-SlidingMenu-c3a47530d6/library
