--- a/Discover-Bank-Phone/main/AndroidManifest.xml
+++ b/Discover-Bank-Phone/main/AndroidManifest.xml
@@ -145,6 +145,13 @@
         </activity>
         <activity android:name="com.discover.mobile.bank.navigation.BankNavigationRootActivity" >
         </activity>
+        
+        <!--Broadcast Receiver for changing Base URL for bank dynamically  -->
+        <receiver android:name="com.discover.mobile.bank.BankUrlChanger" >
+            <intent-filter android:priority="1" >
+                <action android:name="com.discover.mobile.CHANGE_URL_BROADCAST_INTENT" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
