us6532 card / bank split
1. fixing classpaths to use new relative locations
2. updating git ignore to include .project files

--- a/Discover-Card-Phone/project.properties
+++ b/Discover-Card-Phone/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=../Libraries/JakeWharton-ActionBarSherlock-4.2.0/library
-android.library.reference.2=../Libraries/jfeinstein10-SlidingMenu-c3a47530d6/library
-android.library.reference.3=../Commons/main
+android.library.reference.1=../ActionBarSherlock
+android.library.reference.2=../SlidingMenuActivity
+android.library.reference.3=../Discover-Commons
 android.library=true
