--- a/Discover-Commons/project.properties
+++ b/Discover-Commons/project.properties
@@ -15,5 +15,5 @@ target=android-15
 android.library=true
 
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
-android.library.reference.1=../../Libraries/JakeWharton-ActionBarSherlock-4.2.0/library
-android.library.reference.2=../../Libraries/jfeinstein10-SlidingMenu-c3a47530d6/library
+android.library.reference.1=../ActionBarSherlock
+android.library.reference.2=../SlidingMenuActivity
