--- a/SlidingMenuActivity/project.properties
+++ b/SlidingMenuActivity/project.properties
@@ -10,4 +10,4 @@
 android.library=true
 # Project target.
 target=android-15
-android.library.reference.1=../../JakeWharton-ActionBarSherlock-4.2.0/library
+android.library.reference.1=../ActionBarSherlock
