Comming for integration fixes.

--- a/Discover-Launch/project.properties
+++ b/Discover-Launch/project.properties
@@ -12,8 +12,8 @@
 
 # Project target.
 target=android-15
-android.library.reference.3=../../../git/Discover-Android/Discover-Commons
-android.library.reference.4=../../../git/Discover-Android/Discover-Card-Phone
-android.library.reference.1=../../../git/Discover-Android/ActionBarSherlock
-android.library.reference.2=../../../git/Discover-Android/SlidingMenuActivity
-android.library.reference.5=../../../git/Discover-Android/Discover-Bank-Phone
+android.library.reference.3=../Discover-Card-Phone
+android.library.reference.4=../Discover-Commons
+android.library.reference.1=../ActionBarSherlock
+android.library.reference.2=../Discover-Bank-Phone
+android.library.reference.5=../SlidingMenuActivity
