ID: US5387 Delete Payment
Highlights
Fixed StrongAuth in AndroidManifest - this was broken during integration phase and was causing a crash
Created interface package
Created util package
Added TimedViewController class which allows to show a view for some time then hide it.
Added StatusView Widget - two item view with a status image and status text

Test Cases:
Navigation - Test Delete Payment Modal is displayed from view Payment detail delete link
Verify "Scheduled Transaction Deleted" is displayed for five seconds
then removed (Verified with a temporary fragment - integration pending)
Verify Delete URL is built correctly based on id of transaction and api url provided via Customer download
Functionality - Test "Yes, Delete" button closes modal and sends a request to server to delete payment
Functionality - Back press on Modal dismisses the modal
UI - Delete Payment modal Should state "Delete Transaction"
Test 401 (Unauthorized) - request has no authentication token, or it has expired
Tested 401 Strong Auth - Pending Fix after answering challenge
Tested 401 Strong Auth No Body
Test 403 (Forbidden) - The authentication token is good, but the user is not authorized to access this resource -  Shows Catch All Modal/Navigates application to login page.
Test 400 Bad Request - An input was malformed - Shows Catch All Modal/Navigates application to login page.
Test 404 Not Found - The specific payment does not exist - Shows Catch All Modal / Navigates to login page
Test 500 (technical difficulty) - Shows Catch All Modal / Navigates to login page
Test 503 (system maintenance) - Shows System Maintenance error dialog and navigates to login page.
Test airplane mode - Shows catch all modal/ navigates to login page

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -50,7 +50,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.discover.mobile.bank.security.EnhancedAccountSecurityActivity"
+            android:name="com.discover.mobile.bank.auth.strong.EnhancedAccountSecurityActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard" >
+        </activity>
+        <activity
+            android:name="com.discover.mobile.card.auth.strong.EnhancedAccountSecurityActivity"
             android:label="@string/app_name"
             android:launchMode="standard" >
         </activity>
