--- a/Discover-Bank-Phone/AndroidManifest.xml
+++ b/Discover-Bank-Phone/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.discover.mobile.bank"
-    android:versionCode="1"
-    android:versionName="4.0" >
+    android:versionCode="1">
 
     <uses-sdk
         android:minSdkVersion="9"
