--- a/Discover-Card-Phone/AndroidManifest.xml
+++ b/Discover-Card-Phone/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.discover.mobile.card"
-    android:versionCode="1">
+    package="com.discover.mobile.card">
 
     <uses-sdk
         android:minSdkVersion="9"
