--- a/Discover-Commons/AndroidManifest.xml
+++ b/Discover-Commons/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.discover.mobile.common"
-    android:versionCode="1">
+    package="com.discover.mobile.common">
 
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16" />
     
