--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -1,3 +1,4 @@
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.discover.mobile"
     android:versionCode="1"
@@ -36,6 +37,7 @@
         android:allowBackup="false"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
+        android:hardwareAccelerated="true"
         android:logo="@drawable/discover_logo_inset"
         android:theme="@style/AppTheme" >
         
