US68888 - adding android pull to refresh library to the classpath

--- a/Discover-Commons/project.properties
+++ b/Discover-Commons/project.properties
@@ -17,3 +17,4 @@ android.library=true
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 android.library.reference.1=../ActionBarSherlock
 android.library.reference.2=../SlidingMenuActivity
+android.library.reference.3=../Android-PullToRefresh
