--- a/Discover-Launch/project.properties
+++ b/Discover-Launch/project.properties
@@ -17,3 +17,4 @@ android.library.reference.4=../Discover-Card-Phone
 android.library.reference.1=../ActionBarSherlock
 android.library.reference.2=../SlidingMenuActivity
 android.library.reference.5=../Discover-Bank-Phone
+android.library.reference.6=../Android-PullToRefresh
