--- a/Discover-Card-Phone/project.properties
+++ b/Discover-Card-Phone/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=../ActionBarSherlock
 android.library.reference.2=../SlidingMenuActivity
 android.library.reference.3=../Discover-Commons
 android.library=true
+android.library.reference.4=../Android-PullToRefresh
