US6622 adding google play library to support ATM Locator

--- a/Discover-Card-Phone/project.properties
+++ b/Discover-Card-Phone/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../SlidingMenuActivity
 android.library.reference.3=../Discover-Commons
 android.library=true
 android.library.reference.4=../Android-PullToRefresh
+android.library.reference.5=../Google-Play-Services
