--- a/Discover-Commons/project.properties
+++ b/Discover-Commons/project.properties
@@ -18,3 +18,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 android.library.reference.1=../ActionBarSherlock
 android.library.reference.2=../SlidingMenuActivity
 android.library.reference.3=../Android-PullToRefresh
+android.library.reference.4=../Google-Play-Services
