--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.discover.mobile"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     
     <uses-sdk
         android:minSdkVersion="10"
@@ -33,6 +36,16 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    
+    <!--  Google Maps API 2 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <permission
+        android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+	<uses-permission android:name="com.discover.mobile.permission.MAPS_RECEIVE"/>
+	<!--  End Google Maps API 2 -->
     
     <application
         android:name="com.discover.mobile.DiscoverApplication"
@@ -42,7 +55,15 @@
         android:hardwareAccelerated="true"
         android:logo="@drawable/discover_logo_inset"
         android:theme="@style/AppTheme" >
-        
+        
+        <!--  Google Maps API 2 -->
+ 		<meta-data
+ 		    android:name="com.google.android.maps.v2.API_KEY"
+ 		    android:value="AIzaSyB6pn6GmhEElZ6846XlAvbfJD7wsWx5MoE"/>
+ 		
+ 		
+ 		<!--  End Google Maps API 2 -->
+ 	
         <!-- Xtify Provider -->
         
         <provider
