US6909 : TA13785 - Camera count down. Added a AsyncTask to the camera overlay that displays and updates a counter to notify the user how much time is left before the picture is taken. TA13781 - Added the capture button, which initiates the timer and picture capture. TA13783 - Retake button. Added the retake button to reset the camera so that another picture can be taken.

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -48,6 +48,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application
         android:name="com.discover.mobile.DiscoverApplication"
@@ -110,7 +111,7 @@
             android:name="com.discover.mobile.bank.checkdeposit.CheckDespositCaptureActivity"
             android:label="@string/app_name"
             android:launchMode="standard" 
-            android:screenOrientation="sensorLandscape">
+            android:screenOrientation="landscape">
         
         </activity>
         
