--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -51,7 +51,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application
-        android:name="com.discover.mobile.DiscoverApplication"
+        android:name="com.discover.mobile.common.DiscoverApplication"
         android:allowBackup="false"
         android:icon="@drawable/discove_mobile_icn"
         android:label="@string/app_name"
