--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -108,7 +108,7 @@
         </activity>
         
         <activity
-            android:name="com.discover.mobile.bank.checkdeposit.CheckDepositCaptureActivity"
+            android:name="com.discover.mobile.bank.deposit.CheckDepositCaptureActivity"
             android:label="@string/app_name"
             android:launchMode="standard" 
             android:screenOrientation="landscape">
