--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -112,7 +112,13 @@
             android:label="@string/app_name"
             android:launchMode="standard" 
             android:screenOrientation="landscape">
-        
+        </activity>
+        
+ 		 <activity
+            android:name="com.discover.mobile.bank.deposit.DepositSubmissionActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard" 
+            android:screenOrientation="portrait">
         </activity>
         
         <activity
