US5954 : US5843 : US6439 : US6678 - FAQ Pages for logged in Bank users. Contains all static content for these pages and is itegrated into it. Works with rotation, help menus, and back stack. Logged out is still in progress.

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -114,6 +114,12 @@
             android:screenOrientation="landscape">
         </activity>
         
+         <activity
+            android:name="com.discover.mobile.bank.help.LoggedOutFAQActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard" >
+        </activity>
+        
  		 <activity
             android:name="com.discover.mobile.bank.deposit.DepositSubmissionActivity"
             android:label="@string/app_name"
