--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -79,9 +79,12 @@
         
         <activity
             android:name="com.discover.mobile.bank.login.LoginActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="sensor"
             android:theme="@style/AppTheme.NoTitleBar"
             android:windowSoftInputMode="adjustPan" >
+
             
             <intent-filter>
                 
