US7370 - adding Caldroid library for calendar support

--- a/Discover-Bank-Phone/project.properties
+++ b/Discover-Bank-Phone/project.properties
@@ -18,3 +18,4 @@ android.library.reference.2=../SlidingMenuActivity
 android.library=true
 android.library.reference.4=../Android-PullToRefresh
 android.library.reference.5=../Google-Play-Services
+android.library.reference.6=../Caldroid
