ID: US7223 - Potential Candidate: Android: Custom Calendar
Tested:
Verify Bank API does not show error dialogs for  exceptions or errors when it fails
Verify Bank Holiday Download does not show error dialogs or exceptions when it fails
Verify able to login after logout (Needs to remember links download during splash screen
Verify Progress dialog is not started for Bank API links download
Verify Customer Service Hardcoded URL used when Bank API Service Call fails.
Verify Bank Holiday is called if bank holiday values are not when user attempts to paybill
Verify onBackPress the calendar is closed and the date on Payment Details remains unchanged
Verify user can navigate through the calendar using navigation arrows
Verify disable dates are rendered correctly on rotation
Verify title is rendered correctly on rotation
Verify today's date is rendered correctly on rotation
Verify the selected month is the same month on rotation

--- a/Discover-Commons/project.properties
+++ b/Discover-Commons/project.properties
@@ -19,3 +19,4 @@ android.library.reference.1=../ActionBarSherlock
 android.library.reference.2=../SlidingMenuActivity
 android.library.reference.3=../Android-PullToRefresh
 android.library.reference.4=../Google-Play-Services
+android.library.reference.5=../Caldroid
