Added Privacy & Terms Activity

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -284,6 +284,8 @@
         <activity android:name=".bank.atm.AtmLocatorActivity"
             android:windowSoftInputMode="adjustPan"></activity>
     
+		 <activity android:name=".bank.terms.BankPrivacyTermsActivity"
+		            android:windowSoftInputMode="adjustPan"></activity>
     </application>
 
 </manifest>
