ID: US5960 - Android: Contact Us/Customer Service
Tested:
- Verified Contact Us can be open from login view
- Verified orientation/ screen off - on/ minimize and maximize of page from login view
- Verified Help Widget displays Card, Bank and Help Number when open from login view
- Verified Contact US shows card and bank information when open from login view
- Verified Back arrow in top action bar navigates user back to login view
- Verified Provide feedback is shown correctly at bottom of page
- Verified Contact Us can be opened from navigation menu when logged in
- Verified orientation /minimize/ and screen on/off when logged in
- Verified Help Menu only shows Bank All Faqs when open from logged in

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -284,7 +284,7 @@
         <activity android:name=".bank.atm.AtmLocatorActivity"
             android:windowSoftInputMode="adjustPan"></activity>
     
-		 <activity android:name=".bank.terms.BankPrivacyTermsActivity"
+		 <activity android:name=".bank.help.BankInfoNavigationActivity"
 		            android:windowSoftInputMode="adjustPan"></activity>
     </application>
 
