--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -126,8 +126,8 @@
  		 <activity
             android:name="com.discover.mobile.bank.deposit.DepositSubmissionActivity"
             android:label="@string/app_name"
-            android:launchMode="standard" 
-            android:screenOrientation="portrait">
+            android:launchMode="standard"
+            android:configChanges="orientation|keyboard|screenSize">
         </activity>
         
         <activity
