ID: DE4032 - ATM Locator - Blank screen in ATM Locator if user taps ToU and taps back ID: DE4577 - Privacy & Terms - navigating through P & T causes CRASH
Tested:
- Verified Privacy/Terms & Faq from Logged In Screen
- Verified Privacy/Terms & Faq from Contact Us in Login Screen
- Verified Privacy/Terms & Faq from ATM in Login Screen
- Verified Privacy/Terms & FAQ while Logged In
- Verified Rotation of Privacy/Terms & FAQs

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -221,6 +221,7 @@
         </receiver>
 
         <activity android:name="com.discover.mobile.bank.atm.AtmLocatorActivity"
+            android:launchMode="standard"
             android:windowSoftInputMode="adjustPan"></activity>
 
         <!-- Broadcast Receiver to logout user out of the application -->
@@ -231,6 +232,7 @@
         </receiver>
         
          <activity android:name="com.discover.mobile.bank.help.BankInfoNavigationActivity"
+             	   android:launchMode="standard"
                    android:windowSoftInputMode="adjustPan" />
     </application>
 
