--- a/Android-PullToRefresh/project.properties
+++ b/Android-PullToRefresh/project.properties
@@ -7,6 +7,8 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+
 # Project target.
 target=Google Inc.:Google APIs:16
 android.library=true
