--- a/Discover-Bank-Phone/project.properties
+++ b/Discover-Bank-Phone/project.properties
@@ -8,10 +8,10 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-#proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-15
+target=Google Inc.:Google APIs:16
 android.library.reference.3=../Discover-Commons
 android.library.reference.1=../ActionBarSherlock
 android.library.reference.2=../SlidingMenuActivity
