DE5067: Added the Card FAQ to the ATM locator.  Also made the provide feedback links go to card.

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -243,6 +243,11 @@
             android:name="com.discover.mobile.bank.help.BankInfoNavigationActivity"
             android:launchMode="standard"
             android:windowSoftInputMode="adjustPan" />
+        
+        <activity
+            android:name="com.discover.mobile.bank.help.CardLoggedOutFAQActivity"
+            android:launchMode="standard"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
