US7225 - Updated the urls for a prod build

--- a/Discover-Bank-Phone/src/com/discover/mobile/bank/bankurl.properties
+++ b/Discover-Bank-Phone/src/com/discover/mobile/bank/bankurl.properties
@@ -1,1 +1,2 @@
-BankUrlManager.0=https://asys.discoverbank.com
+BankUrlManager.0=https://www.discoverbank.com
+BankUrlManager.1=https://asys.discoverbank.com
