--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.discoverfinancial.mobile"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="5.0.0"  > <!-- DEFECT 96690 -->
     
     
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
