DE5544  - Help icon - tapping card FAQs in help icon in atm locator causes CRASH DE5542  - App Crashes after tapping on Help button in Checking account account activity US8818 - Android: Custom Variables to Provide Feedback
Tested:
- Verified Provide Feedback works when logged out and logged in
- Verified ATM Provide Feedback works when logged out and logged in
- Verified All Faqs, Card Faqs, Bank Faqs, Check Deposit, and ATM are displayed correctly and does not crash the app on Baseline and non-baseline devices

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -240,7 +240,8 @@
             </intent-filter>
         </receiver>
         
-
+        <activity android:name="com.discover.mobile.bank.help.CardLoggedOutFAQActivity"></activity>
+        
         <activity android:name=".card.phonegap.plugins.ContactViewResult" >
         </activity>
          <activity android:name="com.discover.mobile.bank.help.BankInfoNavigationActivity"
