--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -153,10 +153,14 @@
             android:name="com.discover.mobile.card.login.register.StrengthBarHelpActivity"
             android:label="@string/app_name"
             android:launchMode="standard" />
+        <!--DEFECT96936-->
         <activity
             android:name="com.discover.mobile.card.login.register.ForgotCredentialsActivity"
             android:label="@string/app_name"
+             android:noHistory= "true"
             android:launchMode="standard" >
+            <!--DEFECT96936-->
+        
         </activity>
         <activity
             android:name="com.discover.mobile.card.login.register.ForgotUserIdActivity"
