--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -127,20 +127,25 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+        <!--DEFECT96936-->
         <activity
             android:name="com.discover.mobile.card.login.register.RegistrationAccountInformationActivity"
             android:label="@string/app_name"
+            android:noHistory= "true"
             android:launchMode="standard" >
         </activity>
         <activity
             android:name="com.discover.mobile.card.login.register.ForgotPasswordAccountInformationActivity"
             android:label="@string/app_name"
+            android:noHistory= "true"
             android:launchMode="standard" >
         </activity>
         <activity
             android:name="com.discover.mobile.card.login.register.ForgotBothAccountInformationActivity"
             android:label="@string/app_name"
+            android:noHistory= "true"
             android:launchMode="standard" />
+        <!--DEFECT96936-->
         <activity
             android:name="com.discover.mobile.card.login.register.CreateLoginActivity"
             android:label="@string/app_name"
@@ -160,13 +165,16 @@
             android:label="@string/app_name"
              android:noHistory= "true"
             android:launchMode="standard" >
-            <!--DEFECT96936-->
+       
         
         </activity>
+        
         <activity
             android:name="com.discover.mobile.card.login.register.ForgotUserIdActivity"
             android:label="@string/app_name"
+            android:noHistory= "true"
             android:launchMode="standard" >
+            <!--DEFECT96936-->
         </activity>
         <activity
             android:name="com.discover.mobile.card.login.register.EnterNewPasswordActivity"
