DE5621 - DFS.DFS_Repository - Defect #97070 - sprint2_Android_Provide Feedback link is not available in mobile Terms of Use page(logged out)
Tested:
- Verified links in Privacy & Statement are linkable
- Verified links in Mobile Terms of Use are linkable

--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -262,6 +262,21 @@
          <activity android:name="com.discover.mobile.bank.help.BankInfoNavigationActivity"
                    android:windowSoftInputMode="adjustPan" />
         <activity android:name=".bank.help.BankInfoNavigationActivity"></activity>
+        
+         <!--Broadcast Receiver for Receiving Intents when navigating to browser  -->
+        <activity android:name="com.discover.mobile.bank.DiscoverIntentListener" 
+            	  android:theme="@android:style/Theme.Translucent.NoTitleBar">
+            <intent-filter>
+			    <category android:name="android.intent.category.DEFAULT" />
+			    <action android:name="android.intent.action.VIEW" />
+			    <data android:scheme="com.discover.mobile" />  
+			</intent-filter>
+			<intent-filter>
+			    <category android:name="android.intent.category.DEFAULT" />
+			    <action android:name="android.intent.action.VIEW" />
+			    <data android:scheme="method" />  
+			</intent-filter>      
+        </activity>
     </application>
 
 </manifest>
