US 7567 Smoke test updates for calabash

--- a/Calabash/features/step_definitions/config.yml
+++ b/Calabash/features/step_definitions/config.yml
@@ -1,8 +1,8 @@
 :login:
     :bank:
-        :username: "asystest505"
+        :username: "asystest506"
         :password: "pass123$"
-        :name: "Angela"
+        :name: "Charmayne"
     :card:
         :username: "TODO"
         :password: "TODO"
