--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -70,6 +70,7 @@
             android:name="com.discover.mobile.bank.login.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoTitleBar"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
