US 7567 Updated documentation and implementation for sso users

--- a/Calabash/features/step_definitions/config.yml
+++ b/Calabash/features/step_definitions/config.yml
@@ -18,7 +18,7 @@
     :card:
         :username: "asysssocred4"
         :password: "pass123$"
-        :name: "A"
+        :name: "LN227052855"
 
 :securityAnswer: "test"
 :afternoon_hour: 12
