--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -102,8 +102,9 @@
         <activity
             android:name="org.apache.cordova.DroidGap"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
             android:launchMode="singleTop"
+            >
             <intent-filter>
             </intent-filter>
         </activity>
