--- a/Calabash/features/step_definitions/config.yml
+++ b/Calabash/features/step_definitions/config.yml
@@ -1,13 +1,17 @@
 :default_bank_user:
     :bank:
-        :username: "asystest506"
+        :username: "asystest505"
         :password: "pass123$"
-        :name: "Charmayne"
+        :name: "Angela"
 
+    :strongauth: false
+
+:default_card_user:
     :card:
         :username: "TODO"
         :password: "TODO"
-        :name: "TODO"
+
+    :strongauth: "TODO"
 
 :default_sso_user:
     :bank:
@@ -19,6 +23,8 @@
         :username: "asysssocred4"
         :password: "pass123$"
         :name: "LN227052855"
+
+    :strongauth: true
 
 :securityAnswer: "test"
 :afternoon_hour: 12
