--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -177,6 +177,13 @@
                 <data android:scheme="method"/>
             </intent-filter>
         </activity>
+        
+         <!--Broadcast Receiver for changing Base URL for bank dynamically  -->
+        <receiver android:name="com.discover.mobile.bank.BankUrlChanger" >
+            <intent-filter android:priority="1" >
+                <action android:name="com.discover.mobile.CHANGE_URL_BROADCAST_INTENT" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
