--- a/Discover-Commons/project.properties
+++ b/Discover-Commons/project.properties
@@ -20,3 +20,4 @@ android.library.reference.2=../SlidingMenuActivity
 android.library.reference.3=../Android-PullToRefresh
 android.library.reference.4=../Google-Play-Services
 android.library.reference.5=../Caldroid
+android.library.reference.6=../Clusterkraf
