--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -55,7 +55,7 @@
         <provider android:name="com.xtify.sdk.db.Provider" android:authorities="com.discoverfinancial.mobile.XTIFY_PROVIDER" android:exported="false"/>
         <!-- Xtify Provider -->
 
-        <activity android:name="com.discover.mobile.bank.login.LoginActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoTitleBar" android:launchMode="singleTop" android:windowSoftInputMode="adjustPan">
+        <activity android:name="com.discover.mobile.bank.login.LoginActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoTitleBar" android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
