--- a/Discover-Launch/AndroidManifest.xml
+++ b/Discover-Launch/AndroidManifest.xml
@@ -103,14 +103,18 @@
             android:name="com.discover.mobile.card.auth.strong.StrongAuthEnterInfoActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:launchMode="standard" >
+            android:launchMode="standard" 
+            android:theme="@style/AppTheme.NoTitleBar"
+            >
         </activity>
         <activity
             android:name="com.discover.mobile.card.auth.strong.StrongAuthQuestionList"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:noHistory="true" >
+            android:noHistory="true" 
+            android:theme="@style/AppTheme.NoTitleBar"
+            >
         </activity>
         <activity
             android:name="com.discover.mobile.card.privacyterms.PrivacyTermsLanding"
